# compress

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: fetch-ffmpeg.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/compress/: audio.rs  ffmpeg.rs  image.rs  mod.rs  video.rs
src/components/: DropZone.tsx  ExportDialog.tsx  FileQueue.tsx  TaskList.tsx
src/hooks/: useCompress.ts
