[package]
name = "compress"
version = "0.1.0"
description = "Cross-platform compression tool"
authors = ["yaonico"]
edition = "2021"

[lib]
name = "compress_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
image = "0.25"
imagequant = "4"
oxipng = "9"
mozjpeg = "0.10"
png = "0.17"
